--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     compile 'org.litepal.android:core:1.5.1'
     //网络请求
     compile 'com.squareup.okhttp:okhttp:2.5.0'
+    compile 'com.android.support:design:25.0.0'
 }
