关注用户未实现，到时候再说

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,9 +34,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.activity.RegisterActivity" />
-        <activity
-            android:name=".ui.activity.MainActivity" />
+        <activity android:name=".ui.activity.MainActivity" />
         <activity android:name=".ui.activity.LoginActivity" />
+        <activity android:name=".ui.activity.QuestionActivity" />
 
         <service
             android:name="com.baidu.location.f"
