--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,16 @@
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
-    <application android:name=".App" android:allowBackup="true" android:icon="@mipmap/logo"
-        android:label="@string/app_name" android:roundIcon="@mipmap/logo" android:supportsRtl="true"
+    <application
+        android:name=".App"
+        android:allowBackup="true"
+        android:icon="@mipmap/logo"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/logo"
+        android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <meta-data android:name="com.baidu.lbsapi.API_KEY"
+        <meta-data
+            android:name="com.baidu.lbsapi.API_KEY"
             android:value="i6VD2fHKM3msMfZtIOXAhFSzDiYGFIwL" />
 
         <activity android:name=".ui.activity.WelcomeActivity">
@@ -30,8 +36,14 @@
         <activity android:name=".ui.activity.MainActivity" />
         <activity android:name=".ui.activity.LoginActivity" />
         <activity android:name=".ui.activity.QuestionActivity" />
+        <activity android:name=".ui.activity.QuestionsActivity" />
+        <activity android:name=".ui.activity.CollectsActivity" />
+        <activity android:name=".ui.activity.PersonsActivity" />
+        <activity android:name=".ui.activity.PersonActivity"/>
 
-        <service android:name="com.baidu.location.f" android:enabled="true"
+        <service
+            android:name="com.baidu.location.f"
+            android:enabled="true"
             android:process=":remote" />
     </application>
 
